--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -214,6 +214,18 @@ hr.small {
     background-size: cover;
     -o-background-size: cover;
 }
+.stats {
+    display: table;
+    width: 100%;
+    height: 400px;
+    color: #fff;
+    background: url(../img/steel.jpg) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 
 /* Portfolio */
 
